fix: spacing

--- a/src/assets/description-page.css
+++ b/src/assets/description-page.css
@@ -1,20 +1,15 @@
 .main-container {
-	max-width: 65rem;
-	margin: 3rem 1rem;
-	display: grid;
-	grid-template-columns: 1fr 5fr;
-	grid-template-rows: auto auto;
+	display: flex;
+	justify-content: center;
+	padding-block: 5rem 3rem;
 }
 
 main {
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
-}
-
-.out-container {
-	display: flex;
-	flex-direction: column;
+	max-width: 65rem;
+	padding: 2rem;
 }
 
 .blocks {
@@ -62,16 +57,13 @@ main {
 	font-size: 2rem;
 }
 
-.banner {
-	grid-column: 1 / -1;
-}
-
 .toc {
-	padding: 0 2rem;
+	padding: 0 0 0 2rem;
 	justify-self: center;
 	position: sticky;
-	top: 2rem;
+	top: 20rem;
 	align-self: start;
+	flex-shrink: 0;
 }
 
 h1 {
@@ -160,22 +152,39 @@ h1 {
 .toc-mobile .toc-item {
 	justify-content: center;
 	padding: 0.75rem 0.5rem;
+	gap: 0;
+	line-height: 0;
 }
 
 .toc-mobile:hover .toc-item {
 	justify-content: flex-start;
 	padding: 0.5rem;
+	gap: 0.5rem;
+	line-height: 1;
 }
 
 .toc-mobile .toc-indicator {
-	width: 4px;
-	height: 20px;
+	width: 20px;
+	height: 3px;
+	transition: all 0.2s ease;
 }
 
 .toc-mobile .toc-item.active .toc-indicator {
 	background: #fff;
-	height: 30px;
-	width: 5px;
+	width: 30px;
+	height: 3px;
+}
+
+.toc-mobile .toc-item:hover .toc-indicator {
+	background: #999;
+	width: 25px;
+	height: 3px;
+}
+
+.toc-mobile .toc-item.active:hover .toc-indicator {
+	background: #fff;
+	width: 35px;
+	height: 3px;
 }
 
 .toc-mobile .toc-divider {
@@ -188,6 +197,11 @@ h1 {
 	opacity: 1;
 	max-height: 10px;
 	margin-bottom: 0.5rem;
+}
+
+ul,
+ol {
+	padding-left: 2rem;
 }
 
 @media (max-width: 768px) {
